<resources>
    <string name="app_name">VisionBuilder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_Home">Home</string>
    <string name="navigation_Calendar">Calendar</string>
    <string name="navigation_Meetings">Meetings</string>
    <string name="navigation_TodoList">Todo List</string>
    <string name="navigation_Goals">Goals</string>
    <string name="navigation_Finance">Finance</string>
    <string name="navigation_Business">Business</string>
    <string name="navigation_Trips">Trips</string>
    <string name="navigation_Contacts">Contacts</string>
    <string name="text_Vision">Vision</string>
    <string name="text_Builder">Builder</string>
    <string name="text_Daily">Daily</string>
    <string name="text_Weekly">Weekly</string>
    <string name="text_Monthly">Monthly</string>
    <string name="text_Yearly">Yearly</string>
    <string name="text_TenYears">10 Years</string>

    <string name="text_School">School</string>
    <string name="text_Tuition">Tuition</string>
    <string name="text_Reminders">Reminders</string>
    <string name="text_AddTuition">Add Tuition</string>
    <string name="text_Teachers">Teachers</string>
    <string name="text_Classes">Classes</string>

    <string name="text_Goals">Goals</string>
    <string name="text_Debit">Debit</string>
    <string name="text_Credit">Credit</string>
    <string name="text_Pending">Pending</string>
    <string name="text_Completed">Completed</string>
    <string name="text_TodoList">Todo List</string>
    <string name="text_BankingTransactions">Banking Transactions</string>


    <string name="text_Add">Add</string>
    <string name="text_AddTask">Add Task</string>
    <string name="title_WriteYourTask">Write Your Task</string>
    <string name="title_SelectDate">Select Date</string>
    <string name="title_SelectTime">Select Time</string>
    <string name="title_activity_vision_platform_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_chat">Chat</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Books">Books</string>
    <string name="title_Quotes">Quotes</string>
    <string name="title_Goals">Goals</string>
    <string name="title_VisionPlaform">Vision Platform</string>

    <string name="title_MyVisionBoard">My Vision Board</string>
    <string name="title_Timeline">Timeline</string>

    <string name="title_SavingPlan">Saving Plan</string>
    <string name="title_Finance">Finance</string>
    <string name="title_Business">Business</string>
    <string name="title_HouseFinance">House Finance</string>
    <string name="title_RentBills">Rent Bills</string>
    <string name="title_CableBills">Cable Bills</string>
    <string name="title_Maintenance">Maintenance</string>
    <string name="title_AddRentBill">Add Rent Bill</string>
    <string name="title_AddMaintenanceBill">Add Maintenance Bill</string>
    <string name="title_MaintenanceFor">Maintenance For</string>
    <string name="title_Price">Price</string>
    <string name="title_AddCableBill">Add Cable Bill</string>
    <string name="title_AddKid">Add Kid</string>
    <string name="title_AddTeacher">Add Teacher</string>
    <string name="title_AddReminder">Add Reminder</string>
    <string name="title_AddClass">Add Class</string>
    <string name="title_AddSchool">Add School</string>
    <string name="title_Shopping">Shopping</string>
    <string name="title_Groceries">Groceries</string>
    <string name="title_DinningOut">Dinning Out</string>
    <string name="title_HE">H E</string>
    <string name="title_Clothing">Clothing</string>
    <string name="title_BrandName">Brand Name</string>
    <string name="title_HotelName">Hotel Name</string>
    <string name="title_ShopName">Shop Name</string>
    <string name="title_StoreName">Store Name</string>
    <string name="title_Amount">Amount</string>
    <string name="title_Date">Date</string>
    <string name="title_Address">Address</string>
    <string name="title_Description">Description</string>
    <string name="hint_selectDate">Select Date</string>
    <string name="hint_Address">Address</string>
    <string name="hint_ClothingDescHint">Which Cloth You Buy Etc</string>
    <string name="hint_HE">Which House Essentials You Buy Etc</string>
    <string name="hint_DinningOutHint">Which Food You Order Etc</string>
    <string name="hint_GroceriesDescHint">Which Groceries You Buy Etc</string>
    <string name="title_BillDetails">Bill Details</string>
    <string name="title_MedicalDetails">Medical Details</string>
    <string name="title_EditBillDetails">Edit Bill Details</string>
    <string name="title_Medical">Medical</string>
    <string name="title_Insurance">Insurance</string>
    <string name="title_Personal">Personal</string>
    <string name="title_Family">Family</string>
    <string name="title_Life">Life</string>
    <string name="title_House">House</string>
    <string name="title_Car">Car</string>
    <string name="title_Other">Other</string>
    <string name="title_FamilyMemberName">Family Member Name</string>
    <string name="title_AddPersonalBill">Add Personal Bill</string>
    <string name="title_AddFamilyBill">Add Family Bill</string>
    <string name="title_Time">Time</string>
    <string name="title_AutoSaving">Autos Savings</string>

    <string name="title_Transportation">Transportation</string>
    <string name="title_Gas">Gas</string>
    <string name="title_PublicTransport">Public Transport</string>
    <string name="title_Loans">Loans</string>
    <string name="title_Studies">Studies</string>
    <string name="title_CreditCards">Credit Cards</string>
    <string name="title_LoanFrom">Loan From</string>
    <string name="title_AutoRegNo">Auto Registration No</string>
    <string name="title_PersonName">Person Name</string>
    <string name="title_HolidayName">Holiday Name</string>
    <string name="title_WorkTitle">Work Title</string>
    <string name="title_workDetails">Work Details</string>
    <string name="title_VacationName">Vacation Name</string>
    <string name="title_VacationDetails">Vacation Details</string>
    <string name="title_HomeName">Home Name</string>
    <string name="title_HomeAddress">Home Address</string>
    <string name="title_BorrowDate">Borrow Date</string>
    <string name="title_DueDate">Due Date</string>
    <string name="title_Interest">Interest</string>
    <string name="title_LoanDetails">Loan Details</string>
    <string name="title_Meetings">Meetings</string>
    <string name="title_Today">Today</string>
    <string name="title_Upcoming">Upcoming</string>
    <string name="title_Weekly">Weekly</string>
    <string name="title_Monthly">Monthly</string>
    <string name="title_MeetingFor">Meeting For</string>
    <string name="title_City">City</string>
    <string name="title_State">State</string>
    <string name="title_ZipCode">Zip Code</string>
    <string name="title_PhoneNumber">Phone Number</string>
    <string name="title_Details">Details</string>
    <string name="title_AddMeeting">Add Meeting</string>
    <string name="hint_SelectMeetingFor">Select Meeting For</string>
    <string name="title_Contacts">Contacts</string>
    <string name="title_Search">Search</string>
    <string name="title_AddContact">Add Contact</string>
    <string name="title_Name">Name</string>
    <string name="title_Calender">Calender</string>

    <string name="insurance_For">Insurance For</string>
    <string name="company_Name">Company Name</string>
    <string name="term_StartDate">Term Start Date</string>
    <string name="term_EndDate">Term End Date</string>
    <string name="notes">Notes</string>
    <string name="car_RegNo">Car Registration No.</string>
    <string name="home_Address">Home Address</string>

    <string name="title_Goal">Goal</string>
    <string name="title_GoalFor">Goal For</string>
    <string name="title_GoalDescription">Goal Description</string>
    <string name="title_GoalTimeline">Goal Timeline</string>
    <string name="hint_SelectTimeline">Select Timeline</string>

    <string name="title_StockAndBond">Stock And Bond</string>
    <string name="title_EarnedIncomeSources">Earned Income Sources</string>
    <string name="title_ProfitIncomeSources">Profit Income Sources</string>
    <string name="title_InterestsIncomeSources">Interests Income Sources</string>
    <string name="title_DividendIncomeSources">Dividend Income Sources</string>
    <string name="title_RentalIncomeSources">Rental Income Sources</string>
    <string name="title_CapitalGainsIncomeSources">Capital Gains Income Sources</string>
    <string name="title_RoyaltyIncomeSources">Royalty Income Sources</string>
    <string name="title_StockAndBondIncomeSources">Stock And Bond Income Sources</string>
    <string name="title_AutoPayment">Autos Payment</string>
    <string name="title_AutoMaintenance">Autos Maintenance</string>
    <string name="title_SourceName">Source Name</string>
    <string name="title_Income">Income</string>
    <string name="title_Trips">Trips</string>

    <string name="text_active">Active</string>
    <string name="text_upcoming">Upcoming</string>
    <string name="text_history">History</string>
    <string name="title_activity_business_details">BusinessDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>