<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_Home"
        android:title="@string/navigation_Home"
        android:icon="@drawable/house_ic"
        />
    <item
        android:id="@+id/navigation_Calendar"
        android:title="@string/navigation_Calendar"
        android:icon="@drawable/calendar_ic"
        />
    <item
        android:id="@+id/navigation_Meetings"
        android:title="@string/navigation_Meetings"
        android:icon="@drawable/meeting_2"
        />
    <item
        android:id="@+id/navigation_TodoList"
        android:title="@string/navigation_TodoList"
        android:icon="@drawable/to_do_list_ic"
        />
    <item
        android:id="@+id/navigation_Goals"
        android:title="@string/navigation_Goals"
        android:icon="@drawable/goal_ic"
        />
    <item
        android:id="@+id/navigation_Finance"
        android:title="@string/navigation_Finance"
        android:icon="@drawable/finance_ic"
        />
    <item
        android:id="@+id/navigation_Business"
        android:title="@string/navigation_Business"
        android:icon="@drawable/business_ic"
        />
    <item
        android:id="@+id/navigation_Trips"
        android:title="@string/navigation_Trips"
        android:icon="@drawable/trips_ic"
    />
    <item
        android:id="@+id/navigation_Contacts"
        android:title="@string/navigation_Contacts"
        android:icon="@drawable/contacts_ic"
        />

</menu>
