<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_Home_2">

    <fragment
        android:id="@+id/navigation_Home_2"
        android:name="com.my.visionbuilder.activities.VisionPlatform.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_vision_platform_home" />

    <fragment
        android:id="@+id/navigation_Search"
        android:name="com.my.visionbuilder.activities.VisionPlatform.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_Chat"
        android:name="com.my.visionbuilder.activities.VisionPlatform.ui.chats.ChatsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_Profile"
        android:name="com.my.visionbuilder.activities.VisionPlatform.ui.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/profile_fragment" />
</navigation>