<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TodoList.AddTaskActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:background="@drawable/bg_bottom_curve"
        >
        <RelativeLayout
            android:id="@+id/back_Sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_30sdp">
            <ImageView

                android:layout_alignParentLeft="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/back_arrow_ic"
                android:layout_marginTop="@dimen/_30sdp"

                />
        </RelativeLayout>
        <TextView
            android:layout_toRightOf="@+id/back_Sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/text_AddTask"
            android:textStyle="bold"
            android:textFontWeight="800"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/title_WriteYourTask"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:singleLine="true"
                        android:textSize="13dp"
                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                        app:boxCornerRadiusTopStart="@dimen/_10sdp">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/title_SelectDate"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/selected_DateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:singleLine="true"
                        android:textSize="13dp"
                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                        app:boxCornerRadiusTopStart="@dimen/_10sdp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/title_SelectTime"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"

                    app:boxCornerRadiusTopStart="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/selected_TimeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:singleLine="true"
                        android:textSize="13dp"
                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                        app:boxCornerRadiusTopStart="@dimen/_10sdp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <com.xgc1986.ripplebutton.widget.RippleButton
                android:id="@+id/btn_Add"
                android:layout_width="215dp"
                android:layout_height="48dp"
                android:text="@string/text_Add"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_bold"
                android:background="@drawable/bg_rounded_corners"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_55sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>