<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/top_Bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:background="@color/colorPrimary"
        >
        <RelativeLayout
            android:id="@+id/back_Sign"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:paddingHorizontal="@dimen/_30sdp">
            <ImageView

                android:layout_alignParentLeft="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/back_arrow_ic"
                android:layout_marginTop="@dimen/_30sdp"

                />
        </RelativeLayout>
        <TextView
            android:layout_below="@id/back_Sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_Calender"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_22sdp" />

        <ImageView
            android:id="@+id/activity_Icon"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/calendar_ic"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/search_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_Bar"
        android:background="@drawable/bg_upper_curve"
        android:layout_marginTop="@dimen/_minus13sdp"
        android:orientation="vertical">

        <TextView
            android:layout_below="@id/back_Sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hint_selectDate"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_18sdp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:singleLine="true"
                android:textSize="13dp"
                android:hint="08 / 08 / 20"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_below="@id/back_Sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_Today"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_Layout"
        android:layout_marginTop="2dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/navigation_Recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingTop="@dimen/_20sdp"
            android:scrollbars="none" />

    </ScrollView>
</RelativeLayout>