<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/top_Bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:background="@drawable/bg_bottom_curve"
        >

        <RelativeLayout
            android:id="@+id/back_Sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_30sdp">
            <ImageView

                android:layout_alignParentLeft="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/back_arrow_ic"
                android:layout_marginTop="@dimen/_30sdp"

                />
        </RelativeLayout>

        <TextView
            android:id="@+id/activity_Title"
            android:layout_toRightOf="@+id/backsign"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_AddContact"
            android:textStyle="bold"
            android:textFontWeight="800"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_ImgSection"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_below="@id/top_Bar"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="@dimen/_10sdp"
            android:id="@+id/profile_pic"
            android:src="@drawable/user_img_ic"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_centerInParent="true"
            />
        <RelativeLayout
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/profile_pic"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@drawable/bg_circle"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/btn_select_picture"
            >
            <ImageView
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:src="@drawable/edit_white_ic"
                android:layout_marginTop="9dp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_below="@+id/user_ImgSection"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/title_Name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15sdp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"

            app:boxCornerRadiusTopStart="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:singleLine="true"
                android:textSize="13dp"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_below="@+id/name_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/title_PhoneNumber"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15sdp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"

            app:boxCornerRadiusTopStart="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:singleLine="true"
                android:textSize="13dp"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.xgc1986.ripplebutton.widget.RippleButton
            android:layout_width="215dp"
            android:layout_height="48dp"
            android:text="@string/text_Add"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/bg_rounded_corners"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>